--- a/css/style.css
+++ b/css/style.css
@@ -1428,10 +1428,6 @@ footer .copy {
 
 
 
-
-
-
-
     .menu-bar {
         width: 50%;
         height: 100vh;
@@ -1558,14 +1554,16 @@ footer .copy {
 }
 
 @media screen and  (min-width:360px) and (max-width:499px) {
-    header ul li:not(:nth-of-type(3)) {
+    .header ul:first-of-type {
         display: none;
     }
 
-    header ul li {
-        font-size: 0.85rem;
-        margin: auto;
-        padding: 35px;
+    .header ul:last-of-type li:nth-child(1), .header ul:last-of-type li:nth-child(2) {
+        display: none;
+    }
+
+    .header ul #open-btn {
+        display: block;
     }
 
     .menu-bar {
@@ -1579,12 +1577,12 @@ footer .copy {
     }
 
     .menu-bar #close-btn {
-        display: none;
+        display: block;
     }
 
 
     .poster .top_poster {
-        width: 150%;
+        width: 100%;
     }
 
     .poster .bottom_poster {
@@ -1601,6 +1599,11 @@ footer .copy {
         display: none;
     }
 
+    main {
+        width: 100%;
+        height: 650px;
+    }
+
     main .main-img ul li img {
         width: 100%;
         height: 650px;
@@ -1610,21 +1613,21 @@ footer .copy {
     main .main-profile {
         width: 100%;
         height: 100%;
-        float: left;
+        position: relative;
     }
     
     main .main-profile .profile-margin {
         width: 70%;
-        height: 800px;
-        position: relative;
-        top: 50%;
+        height: 100%;
+        position: absolute;
+        top: 63%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
 
     main .main-img {
         width: 100%;
-        height: 980px;
+        height: 650px;
         position: absolute;
         opacity: 0.5;
     }
@@ -1673,7 +1676,10 @@ footer .copy {
         width: 100%;
         overflow: hidden;
         margin: auto;
-        margin-top: 200px;
+    }
+
+    .notices .noti-opa {
+        height: 500px;
     }
 
     .noti01, .noti02 {
